<resources>
    <string name="app_name">Cookies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_post_header">Post Header</string>
    <string name="account_menu_title">Account</string>
    <string name="home_menu_title">Home</string>
    <string name="name_hint_input">Name</string>
    <string name="email_hint_input">Email</string>
    <string name="password_hint_input">Password</string>
    <string name="rePassword_hint_input">Re Enter Password</string>
    <string name="login_button_text">Sign in</string>
    <string name="logout_button_text">Sign out</string>
    <string name="title_label">Title</string>
    <string name="ingredient_label">Ingredient</string>
    <string name="people_label">People</string>
    <string name="time_label">Time</string>
    <string name="helper_text_time">Minutes</string>
    <string name="post_preview_image_desc">Preview Post Image</string>
    <string name="add_new_post_button_text">Add</string>
    <string name="food_type_label">Food type</string>
    <string name="daily_label">Daily</string>
    <string name="occasions_label">Occasions</string>
    <string name="easy_label">Easy</string>
    <string name="update_profile_button_text">Update profile</string>
    <string name="healthy_label">Healthy</string>
    <string name="comment_hint">Comment</string>
    <string name="comment_label">Comments</string>
    <string name="preparation_label">Preparation</string>
    <string name="comment_button">Send</string>
    <string name="search_menu_title">Search</string>
    <string name="search_hint">Search for recipe</string>
    <string name="new_recipe_menu">New recipe</string>
    <string name="share_link">https://cooking-forum.web.app/productid-details/%s</string>
    <string name="time_people_text">for %s rations with %s minutes of cooking</string>
    <string name="picture_post_desc">Recipe picture</string>
    <string name="delete_button_desc">Delete the comment</string>
    <string name="delete_recipe_button_text">Delete</string>
    <string name="occasions_recipes_label">Occasions Recipes</string>
    <string name="daily_recipes_label">Daily Recipes</string>
    <string name="easy_recipes_label">Easy Recipes</string>
    <string name="healthy_recipes_label">Healthy Recipes</string>
    <string name="update_action_label">Update</string>
    <string name="share_action_label">Share</string>
    <string name="update_button_label">Update</string>
    <string name="edit_recipe_label">Edit recipe</string>
    <string name="add_new_recipe_label">New recipe</string>
    <string name="like_action_label">Like</string>
    <string name="like_label">%s people like this</string>
    <string name="select_food_type">Select food type</string>
    <string name="error_input_text">This fill must not be empty</string>
    <string name="error_password_input">Please input valid password</string>
    <string name="error_re_password_input">Confirm password not match</string>
</resources>